--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,8 @@ jobs:
       with:
         python-version: '3.x'
     
+    - name: Install dependencies
+      run: pip install requests
+    
     - name: Execute refresh script
       run: python refresh_script.py
