--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Debug: Show current directory and list files before creation
+      - name: DebugShow current directory and list files before creation
         run: |
           echo "Current directory:"
           pwd
