--- a/requirements.txt
+++ b/requirements.txt
@@ -24,13 +24,11 @@ iso8601==1.0.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jwcrypto==1.5.4
-Kivy==2.3.1
-Kivy-Garden==0.1.5
 launchpadlib==1.11.0
 lazr.restfulclient==0.14.6
 lazr.uri==1.0.6
 lxml==6.0.2
-Mako==1.3.2.dev0
+Mako==1.3.2
 Markdown==3.5.2
 MarkupSafe==2.1.5
 mercurial==6.7.2
